# Contrastive-Learning-with-MNIST

./: .gitignore  .pre-commit-config.yaml  README.md  classify.py  components.py  contrastive.py  environment.yml  plot.py  pyproject.toml  test.py  train.py  tune.py
src/: augment.py  classify.py  components.py  contrastive.py  data.py  plot.py  stn.py  test.py  train.py
