[tool.poetry]
name = "mnist_representation_learning"
version = "0.1.0"
description = "Experimenting with method of learning representations for MNIST dataset"
readme = "README.md"
authors = ["Rajat Rasal <rajatrasal6399@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.3.2", "poetry-plugin-export>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.9.*"
numpy = "1.23.5"
torch = "1.12.1"
torchvision = "0.13.1"
pytorch_lightning = "1.8.3.post0"
lightning-bolts = "0.6.0.post1"
torchmetrics = "0.10.3"
pytorch-metric-learning = "1.6.3"
tensorboard = "^2.11.0"
pandas = "1.5.2"
ray = {extras = ["default", "air"], version = "2.1.0"}
seaborn = "0.12.1"
kornia = "0.6.8"
